--- a/materials/03-remote-hosting.qmd
+++ b/materials/03-remote-hosting.qmd
@@ -170,6 +170,13 @@ a.csv
 Use -f if you really want to add them.
 ```
 
+Go ahead and push your .gitignore to the remote so other people working on our project can use it too.  
+
+```{bash}
+$ git push
+```
+
+
 We can also ignore full subfolders by adding the folder name to our .gitignore.
 
 Add another line to your .gitignore so it looks like:
