--- a/materials/03-remote-hosting.qmd
+++ b/materials/03-remote-hosting.qmd
@@ -12,7 +12,7 @@ Systems like Git allow us to move work between two repositories. The repositorie
 
 If you recall, in the pre-workshop, you created a GitHub account and associated it with your GitHub handle (or ID). You also configured your computer with a token (PAT) in a way that should seamlessly allow us to to create a remote repository on GitHub that will be linked to our local repository. Then we will share the changes we’ve made to our current project with the world.
 
-## 3.1 **Creating a Remote Repository**
+## 3.1 Creating a Remote Repository
 
 1.  Log in to GitHub. Your personal dashboard is the first page you'll see when you sign in on GitHub.
 
@@ -46,7 +46,7 @@ Now that we have two repositories, we need a diagram like this
 
 Note that our local repository still contains our earlier work on `mars.txt`, but the remote repository on GitHub appears empty as it doesn’t contain any files yet.
 
-## **3.2 Connecting to (Cloning) a Remote Repository**
+## 3.2 Connecting to (Cloning) a Remote Repository
 
 Now we connect the two repositories. We do this by making the GitHub repository a [remote](https://swcarpentry.github.io/git-novice/reference.html#remote) for the local repository. Previously we were shown a page which looked like this:
 
@@ -81,7 +81,7 @@ origin   https://github.com/<yourusername>/planets.git (fetch)
 origin   https://github.com/<youusername>/planets.git (push)
 ```
 
-## **3.2 Push Local Changes to a Remote Repository**
+## 3.2 Push Local Changes to a Remote Repository
 
 Now that authentication is setup, we can return to the remote. This command will push the changes from our local repository to the repository on GitHub:
 
@@ -103,7 +103,7 @@ To https://github.com/<youusername>/planets.git
 
 ![](../materials/images/github-repo-after-first-push.svg)
 
-## **3.3 Ignoring Things**
+## 3.3 Ignoring Things
 
 What if we have files that we do not want Git to track for us, like backup files created by our editor or intermediate files created during data analysis? This often is the case in BC Government data projects.
 
