--- a/materials/03-remote-hosting.qmd
+++ b/materials/03-remote-hosting.qmd
@@ -28,13 +28,21 @@ If you recall, in the pre-workshop, you created a GitHub account and associated 
 
 5.  Make sure HTTPS is selected and then click the clipboard icon to copy the URL. We will use this URL in the next section.
 
-Note: you have effectively done the following on GitHub's servers:
+You have effectively done the following on GitHub's servers:
 
 ```{bash}
 $ mkdir planets
 $ cd planets
 $ git init
 ```
+
+::: callout-tip
+## HTTPS vs SSH - what's the difference?
+
+HTTP and SSH refer to different protocols Git can use to transfer data. SSH is ubiquitous; many network admins have experience with them and many OS distributions are set up with them or have tools to manage them. Access over SSH is secure as all data transfer is encrypted and authenticated. It is also efficient, making the data as compact as possible before transferring it.
+
+HTTP operates very similarly to the SSH protocol but runs over standard HTTPS ports and can use various HTTP authentication mechanisms, meaning it’s often easier on the user than something like SSH, since you can use things like username/password authentication rather than having to set up SSH keys.
+:::
 
 If you remember back to the earlier episode where we added and committed our earlier work on mars.txt, we had a diagram of the local repository which looked like this:
 
@@ -44,31 +52,29 @@ Now that we have two repositories, we need a diagram like this
 
 ![](../materials/images/git-freshly-made-github-repo.svg)
 
-Note that our local repository still contains our earlier work on `mars.txt`, but the remote repository on GitHub appears empty as it doesn’t contain any files yet.
+::: callout-note
+Our local repository still contains our earlier work on `mars.txt`, but the remote repository on GitHub appears empty as it doesn’t contain any files yet.
+:::
 
 ## 3.2 Connecting to (Cloning) a Remote Repository
 
-Now we connect the two repositories. We do this by making the GitHub repository a [remote](https://swcarpentry.github.io/git-novice/reference.html#remote) for the local repository. Previously we were shown a page which looked like this:
+Now we connect the two repositories. We do this by making the GitHub repository a [remote](https://swcarpentry.github.io/git-novice/reference.html#remote) for the local repository. Remote branches are configured using the git **remote** command.
 
-![](images/clipboard-321009940.png)
-
-At the time, we chose to use HTTPS as our security protocol for connecting the two repositories.
-
-**SAY SOMETHING ABOUT HTTPS vs SSH**
-
-Go into the local `planets` repository, and run this command:
-
-```{bash}
-$ git remote add origin https://github.com/<yourusername>/planets.git
-```
-
-which is equivalent to
+Go into the local `planets` repository, and run this command (using the URL copied to our clipboard):
 
 ```{bash}
 $ git remote add origin <paste copied URL here>
 ```
 
-`origin` is a local name used to refer to the remote repository. It could be called anything, but `origin` is a convention that is often used by default in git and GitHub, so it’s helpful to stick with this unless there’s a reason not to.
+alternatively,
+
+```{bash}
+$ git remote add origin https://github.com/<yourusername>/planets.git
+```
+
+::: callout-note
+"origin" is a local name used to refer to the remote repository. It could be called anything, but "origin" is a convention that is often used by default in git and GitHub, so it’s helpful to stick with this unless there’s a reason not to.
+:::
 
 We can check that the command has worked by running `git remote -v`:
 
@@ -83,7 +89,7 @@ origin   https://github.com/<youusername>/planets.git (push)
 
 ## 3.2 Push Local Changes to a Remote Repository
 
-Now that authentication is setup, we can return to the remote. This command will push the changes from our local repository to the repository on GitHub:
+Now that authentication is setup, we can return to the remote. The git push command is used to upload local repository content to a remote repository. This command is how you transfer commits from your local repository to the repository on GitHub.  
 
 ```{bash}
 $ git push origin main
@@ -100,6 +106,10 @@ remote: Resolving deltas: 100% (2/2), done.
 To https://github.com/<youusername>/planets.git
  * [new branch]      main -> main
 ```
+
+The git push command takes two arguments: the name of the remote repository and an optional branch name. Used without the branch name (git push origin) will push changes from all local branches to the remote.  We may also use git push without specifying any arguments if we've already configured the remote for the current branch.  Git push will push only changes on our current branch to the remote.
+
+Now our repositories look like:
 
 ![](../materials/images/github-repo-after-first-push.svg)
 
@@ -170,7 +180,7 @@ a.csv
 Use -f if you really want to add them.
 ```
 
-Go ahead and push your .gitignore to the remote so other people working on our project can use it too.
+Go ahead and push your .gitignore to the remote so other people working on our project can use it too. 
 
 ```{bash}
 $ git push
@@ -208,3 +218,101 @@ nothing added to commit but untracked files present (use "git add" to track)
 ```
 
 The subfolder "results" and it's contents are ignored. This is handy for keeping all of your data in a single folder. You simply add the data folder to your .gitignore and the contents will not be accidentally pushed.
+
+## 3.4 Pulling changes from GitHub
+
+Git allows you to work collaboratively, with multiple people making changes to the same repo and sharing those changes through GitHub. We've seen how to create a repository and push changes to it; now we will see how to pull another person's changes from Github.  
+
+Start by opening a second terminal window. This window will represent your partner, working on another computer. You won’t need to give anyone access on GitHub, because both ‘partners’ are you.
+
+In the second window, navigate to the folder one level "up" in the directory tree from where you have your planets repository. 
+
+```{bash}
+$ ls
+```
+
+``` bash-output-box
+planets
+```
+
+you don't want to overwrite your first version of planets.git, so you will clone the planets repository to a different location.
+
+```{bash}
+$ mkdir collab
+$ cd collab
+```
+
+Clone the planets repo substituting in your Github user name:
+
+```{bash}
+git clone https://github.com/<yourusername>/planets.git
+```
+
+``` bash-output-box
+Cloning into 'planets'...
+remote: Enumerating objects: 10, done.
+remote: Counting objects: 100% (10/10), done.
+remote: Compressing objects: 100% (5/5), done.
+remote: Total 10 (delta 2), reused 10 (delta 2), pack-reused 0
+Receiving objects: 100% (10/10), done.
+Resolving deltas: 100% (2/2), done.
+```
+
+You can now make a change in your clone of the original repository, exactly the same way as we’ve been doing before.  Add a line of text to a .txt file and save in your cloned repository.  
+
+```{bash}
+$ cat pluto.txt
+```
+
+``` bash-output-box
+It is so a planet!
+```
+
+```{bash}
+$ git add pluto.txt
+$ git commit -m "Add notes about Pluto"
+```
+
+``` bash-output-box
+ 1 file changed, 1 insertion(+)
+ create mode 100644 pluto.txt
+```
+
+```{bash}
+$ git push origin main
+```
+
+``` bash-output-box
+Enumerating objects: 4, done.
+Counting objects: 100% (4/4), done.
+Delta compression using up to 12 threads
+Compressing objects: 100% (2/2), done.
+Writing objects: 100% (3/3), 302 bytes | 302.00 KiB/s, done.
+Total 3 (delta 0), reused 0 (delta 0), pack-reused 0
+To https://github.com/<yourusername>/planets.git
+   3abcea2..b792d59  main -> main
+
+```
+
+::: callout-note
+We didn’t have to create a remote called origin: Git uses this name by default when we clone a repository. (This is why origin was a sensible choice earlier when we were setting up remotes by hand.)
+:::
+
+
+To download the your changes from GitHub, switch to the other bash window (the one with the original repository) and enter:
+
+```{bash}
+$ git pull origin main
+```
+
+``` bash-output-box
+From https://github.com/<yourusername>/planets
+ * branch            main       -> FETCH_HEAD
+Updating 3abcea2..b792d59
+Fast-forward
+ pluto.txt | 1 +
+ 1 file changed, 1 insertion(+)
+ create mode 100644 pluto.txt
+`
+
+Now the three repositories (original local, second local, and the one on GitHub) are back in sync.
