--- a/materials/01-what-is-vc.qmd
+++ b/materials/01-what-is-vc.qmd
@@ -2,6 +2,8 @@
 title: "1. What is Version Control"
 ---
 
+![Not this...](../figures/finaldoc.gif){fig-align="left"}
+
 ## 1.1 What is Version Control?
 
 **Version control**, also known as source control, is the practice of tracking and managing changes to software code. **Version control systems** are software tools that are used to help individuals and software development teams manage changes to code/documents over time.
@@ -12,11 +14,11 @@ We've all been in this situation before: it seems unnecessary to have multiple n
 
 Version control systems start with a base version of the document and then record changes you make each step of the way. You can think of it as a recording of your progress: you can rewind to start at the base document and play back each change you made, eventually arriving at your more recent version.
 
-![Changes Are Saved Sequentially](../figures/what-is-vc-1.png)
+![Changes Are Saved Sequentially](../figures/what-is-vc-1.png){fig-align="left"}
 
 Once you think of changes as separate from the document itself, you can then think about "playing back" different sets of changes on the base document, ultimately resulting in different versions of that document. For example, two users can make independent sets of changes on the same document.
 
-![Different Versions Can be Saved and Merged](../figures/what-is-vc-2.png)
+![Different Versions Can be Saved and Merged](../figures/what-is-vc-2.png){fig-align="left"}
 
 Unless multiple users make changes to the same section of the document - a conflict - you can incorporate two sets of changes into the same base document.
 
